# RiseOnline

./: .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml
docker/: Dockerfile  entrypoint.sh
src/articles/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
src/articles/migrations/: 0001_initial.py  0002_alter_article_article_alter_article_created_date_and_more.py  0003_alter_article_options_alter_article_table.py  0004_article_full_article_alter_article_article.py  0005_alter_article_article.py  0006_alter_article_created_date.py
src/config/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
src/contacts/: admin.py  forms.py  models.py  urls.py  views.py
src/contacts/migrations/: 0001_initial.py  0002_contact_msg_read.py
src/fixtures/: articles.json  items.json  menu.json  monsters.json  quests.json  rewards.json  skills.json  test.json  zones.json
src/items/: admin.py  models.py  urls.py  views.py
src/items/migrations/: 0001_initial.py  0002_alter_items_img_alter_items_name.py  0003_items_item_type.py  0004_alter_items_item_type.py  0005_alter_items_item_type.py  0006_alter_items_item_type.py  (+2 more)
src/menu/: admin.py  models.py
src/monsters/: admin.py  models.py  urls.py  views.py
src/quests/: admin.py  apps.py  models.py  urls.py  views.py
src/rewards/: admin.py  models.py
src/skills/: admin.py  models.py  urls.py  views.py
src/templates/: base-login.html  base.html  index.html
src/zones/: admin.py  models.py  urls.py  views.py
static/: scripts.js  styles.css
static/tailwind_css/: styles.css
(+44 files in other folders)
